--- a/composer.json
+++ b/composer.json
@@ -12,18 +12,22 @@
         "php": "^8",
         "b13/container": "^2.0",
         "b13/typo3-config": "^0.1.5",
+        "fluidtypo3/vhs": "^6.1",
         "gridelementsteam/gridelements": "dev-master",
-        "site/site-grids2container": "^0.1",
+        "helhum/typo3-console": "^7",
+        "site/site-grids2container": "^0.1.0",
         "typo3/cms-backend": "^11.5",
         "typo3/cms-core": "^11.5",
         "typo3/cms-extbase": "^11.5",
         "typo3/cms-extensionmanager": "^11.5",
         "typo3/cms-filelist": "^11.5",
         "typo3/cms-fluid": "^11.5",
+        "typo3/cms-fluid-styled-content": "^11.5",
         "typo3/cms-frontend": "^11.5",
         "typo3/cms-install": "^11.5",
         "typo3/cms-lowlevel": "^11.5",
-        "typo3/cms-recordlist": "^11.5"
+        "typo3/cms-recordlist": "^11.5",
+        "typo3/cms-tstemplate": "^11.5"
     },
     "repositories": [
         {
