--- a/src/extensions/grids2container/composer.json
+++ b/src/extensions/grids2container/composer.json
@@ -11,7 +11,7 @@
             "role": "Developer"
         }
     ],
-    "require-dev": {
+    "require": {
         "symfony/var-dumper": "^6.0"
     },
     "autoload": {
