--- a/composer.json
+++ b/composer.json
@@ -9,25 +9,48 @@
         }
     ],
     "require": {
-        "php": "^8",
         "b13/container": "^2.0",
         "b13/typo3-config": "^0.1.5",
         "fluidtypo3/vhs": "^6.1",
         "gridelementsteam/gridelements": "dev-master",
-        "helhum/typo3-console": "^7",
+        "helhum/typo3-console": "*",
         "site/site-grids2container": "^0.1.0",
+        "typo3/cms-about": "^11.5",
+        "typo3/cms-adminpanel": "^11.5",
         "typo3/cms-backend": "^11.5",
+        "typo3/cms-belog": "^11.5",
+        "typo3/cms-beuser": "^11.5",
         "typo3/cms-core": "^11.5",
+        "typo3/cms-dashboard": "^11.5",
         "typo3/cms-extbase": "^11.5",
         "typo3/cms-extensionmanager": "^11.5",
+        "typo3/cms-felogin": "^11.5",
         "typo3/cms-filelist": "^11.5",
+        "typo3/cms-filemetadata": "^11.5",
         "typo3/cms-fluid": "^11.5",
         "typo3/cms-fluid-styled-content": "^11.5",
+        "typo3/cms-form": "^11.5",
         "typo3/cms-frontend": "^11.5",
+        "typo3/cms-impexp": "^11.5",
+        "typo3/cms-indexed-search": "^11.5",
+        "typo3/cms-info": "^11.5",
         "typo3/cms-install": "^11.5",
+        "typo3/cms-linkvalidator": "^11.5",
         "typo3/cms-lowlevel": "^11.5",
+        "typo3/cms-opendocs": "^11.5",
         "typo3/cms-recordlist": "^11.5",
-        "typo3/cms-tstemplate": "^11.5"
+        "typo3/cms-recycler": "^11.5",
+        "typo3/cms-redirects": "^11.5",
+        "typo3/cms-reports": "^11.5",
+        "typo3/cms-rte-ckeditor": "^11.5",
+        "typo3/cms-scheduler": "^11.5",
+        "typo3/cms-seo": "^11.5",
+        "typo3/cms-setup": "^11.5",
+        "typo3/cms-sys-note": "^11.5",
+        "typo3/cms-t3editor": "^11.5",
+        "typo3/cms-tstemplate": "^11.5",
+        "typo3/cms-viewpage": "^11.5",
+        "typo3/cms-workspaces": "^11.5"
     },
     "repositories": [
         {
@@ -44,7 +67,11 @@
     },
     "scripts": {
         "post-autoload-dump": [
-            "@php -r \"file_exists('.env') || copy('.env.dist', '.env');\""
+            "@typo3-cms-scripts"
+        ],
+        "typo3-cms-scripts": [
+            "typo3cms install:fixfolderstructure",
+            "typo3cms install:extensionsetupifpossible"
         ]
     }
 }
