--- a/src/extensions/grids2container/composer.json
+++ b/src/extensions/grids2container/composer.json
@@ -12,7 +12,7 @@
         }
     ],
     "require": {
-        "symfony/var-dumper": "^6.0"
+        "symfony/var-dumper": "^5 || ^6"
     },
     "autoload": {
         "psr-4": {
